TransformUI: Be more lenient when rejecting the better repainting approach
Instead of rejecting with all java version that support the module system we only do it for versions >= 16 as those actually enforce the encapsulation. We also offer an option to opt-in to the better version by passing appropriate jvm flags.